fixed the crash after the maximum  broke

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -1,4 +1,5 @@
 {
     "bet": "Wette {{ amount }}",
-    "done": "Fertig"
+    "done": "Fertig",
+    "brokethebank": "{{ name }} hat die Bank gesprengt."
 }
